--- a/src/pages/film-details/film-details.html
+++ b/src/pages/film-details/film-details.html
@@ -1,13 +1,16 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title>Details</ion-title>
+    <ion-title>{{ film.title }}</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  Film ID: {{ filmID }}
-  <button ion-button full (click)="goBack()">Go back!</button>
+  <ion-card>
+    <ion-card-content>
+      {{ film.opening_crawl }}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
