--- a/src/pages/films/films.html
+++ b/src/pages/films/films.html
@@ -6,6 +6,9 @@
 
 
 <ion-content padding>
-  <button ion-button full (click)="openDetails()">Go to Details</button>
-  <button ion-button full (click)="goToPlantes()">Switch to Planets</button>
+  <ion-list> 
+    <button ion-item *ngFor="let film of (films | async)?.results" (click)="openDetails(film)">
+      {{ film.title }}
+    </button>
+  </ion-list>
 </ion-content>
